server/public/main.css
body {
  font-family: Courier, monospace;
  font-size: 12px;
  line-height: 1.4;
  margin: 0;
}

pre {
  font-family: Courier, monospace;
}

#build-log {
  margin: 0;
  padding: 1em;
}

#autoscroll-toggle {
  position: fixed;
  top: 1em;
  right: 1em;
}

.ansi-bold { font-weight: bold; }

body { background: #222222; color: #dfeee0; }

a { color: #6a9eef; }

#build-header {
  position: fixed;
  clear: both;
  width: 100%;
  height: 90px;
  z-index: 2;
}

#build-body {
  position: relative;
  top: 90px;
  z-index: 1;
}

#build-title {
  padding: 0;
  position: relative;
}

#build-title h1 {
  line-height: 60px;
  display: inline-block;
  margin: 0;
  color: #fff;
}

#build-title.succeeded,
#builds li.succeeded {
  background: #8cb287;
}

#build-title.failed,
#builds li.failed {
  background: #d36764;
}

#build-title.pending,
#builds li.pending {
  background: #5d4c4c;
}

#build-title.errored,
#builds li.errored {
  background: #e1bc8e;
}

#build-title.aborted,
#builds li.aborted {
  background: #d25f3a;
}

#build-title.started,
#builds li.started {
  background: #ebb263;
}

#build-title .trigger-build {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  padding: 0;
}

#build-title .trigger-build input {
  border: none;
  font-size: 2em;
  font-family: inherit;
  font-weight: bold;
  color: #fff;
  cursor: pointer;
  padding: 0 16px;
  margin: 0;
  background: rgba(255, 255, 255, 0.125);
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
}

#build-title .trigger-build input:hover {
  background: rgba(255, 255, 255, 0.25);
}

#build-title .trigger-build input:active {
  background: rgba(0, 0, 0, 0.125);
  outline: none;
}

#build-title .abort-build {
  display: inline-block;
}

#build-title .abort-build input {
  border: none;
  font-family: inherit;
  height: 100%;
  position: absolute;
  top: 0;
  bottom: 0;
  font-weight: bold;
  cursor: pointer;
  padding: 0 16px;
  margin: 0;
  background: rgba(255, 255, 255, 0.125);
  margin-left: 2em;
  color: #d36764;
}

#build-title .abort-build input:hover {
  background: #d36764;
  color: #fff;
}

#build-title .abort-build input:active {
  background: #d25f3a;
  color: #fff;
}

#build-title a.title {
  border: none;
  font-size: 2em;
  font-family: inherit;
  font-weight: bold;
  color: #fff;
  cursor: pointer;
  padding: 0 12px;
  margin: 0;
  text-decoration: none;
  background: rgba(255, 255, 255, 0.125);
}

#build-title a.title:hover {
  background: rgba(255, 255, 255, 0.25);
}

#build-title a.title:active {
  background: rgba(0, 0, 0, 0.125);
  outline: none;
}

#builds {
  display: block;
  overflow: auto;
  background: #111;
  list-style: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  white-space:nowrap;
}

#builds li {
  display: inline-block;
  opacity: .8;
}

#builds li.current {
  opacity: 1;
}

#builds li a {
  font-size: 20px;
  line-height: 1em;
  text-align: center;
  margin: 0;
  padding: 5px;
  display: block;
  font-weight: bold;
  text-decoration: none;
  color: #fff;
}

#builds li.started a {
  -webkit-animation: wiggle-build 0.5s infinite;
}

#build-title.started h1 {
  -webkit-animation: wiggle-build 0.5s infinite;
}

@-webkit-keyframes wiggle-build {
  0% { -webkit-transform: rotate(1deg); }
  50% { -webkit-transform: rotate(-1deg); }
  100% { -webkit-transform: rotate(1deg); }
}

#metadata {
  position: fixed;
  top: 0;
  right: 0;
  margin-top: 90px;
  padding: 1em;
}

#metadata h3 {
  background: #111;
  padding: .25em .5em;
  margin-top: 0;
}

#metadata dt {
  width: 10em;
  display: inline-block;
  float: left;
  text-align: right;
}

#metadata dd {
  white-space: pre;
  margin-left: 11em;
}

::selection { background: #555555; color: #ffffff; }

.black, .ansi-black-fg { color: #453c31; }
.black.bright, .ansi-bright-black-fg, .ansi-black-fg.ansi-bold { color: #5d4c4c; }

.red, .ansi-red-fg { color: #d36764; }
.red.bright, .ansi-bright-red-fg, .ansi-red-fg.ansi-bold { color: #d25f3a; }

.green, .ansi-green-fg { color: #8cb287; }
.green.bright, .ansi-bright-green-fg, .ansi-green-fg.ansi-bold { color: #8eac27; }

.yellow, .ansi-yellow-fg { color: #ebb263; }
.yellow.bright, .ansi-bright-yellow-fg, .ansi-yellow-fg.ansi-bold { color: #ffad65; }

.blue, .ansi-blue-fg { color: #6a9eef; }
.blue.bright, .ansi-bright-blue-fg, .ansi-blue-fg.ansi-bold { color: #8cd2ed; }

.magenta, .ansi-magenta-fg { color: #e1bc8e; }
.magenta.bright, .ansi-bright-magenta-fg, .ansi-magenta-fg.ansi-bold { color: #a16d00; }

.cyan, .ansi-cyan-fg { color: #b5c9e1; }
.cyan.bright, .ansi-bright-cyan-fg, .ansi-cyan-fg.ansi-bold { color: #b5c9e1; }

.white, .ansi-white-fg { color: #c0afa0; }
.white.bright, .ansi-bright-white-fg, .ansi-white-fg.ansi-bold { color: #e0cfc0; }

.ansi-black-bg { background-color: #453c31; }
.ansi-bright-black-bg { background-color: #5d4c4c; }

.ansi-red-bg { background-color: #d36764; }
.ansi-bright-red-bg { background-color: #d25f3a; }

.ansi-green-bg { background-color: #8cb287; }
.ansi-bright-green-bg { background-color: #8eac27; }

.ansi-yellow-bg { background-color: #ebb263; }
.ansi-bright-yellow-bg { background-color: #ffad65; }

.ansi-blue-bg { background-color: #6a9eef; }
.ansi-bright-blue-bg { background-color: #8cd2ed; }

.ansi-magenta-bg { background-color: #e1bc8e; }
.ansi-bright-magenta-bg { background-color: #a16d00; }

.ansi-cyan-bg { background-color: #b5c9e1; }
.ansi-bright-cyan-bg { background-color: #b5c9e1; }

.ansi-white-bg { background-color: #c0afa0; }
.ansi-bright-white-bg { background-color: #e0cfc0; }

svg h1 {
  margin: 5px;
}

svg h1.resource {
  font-size: 1.5em;
  margin: 5px 10px;
  font-weight: normal;
}

svg h1 a {
  padding: 5px;
  font-weight: bold;
  color: #fff;
  text-decoration: none;
}

svg .node rect {
  fill: #111;
}

svg .node.job.succeeded rect { fill: #8cb287; }
svg .node.job.failed rect { fill: #d36764; }
svg .node.job.pending rect { fill: #5d4c4c; }
svg .node.job.errored rect { fill: #e1bc8e; }
svg .node.job.aborted rect { fill: #d25f3a; }
svg .node.job.started rect { fill: #ebb263; -webkit-animation: wiggle-build 0.5s infinite; }

.edgeLabel rect {
  fill: none;
}

.edgeLabel text {
  font-size: 1em;
  font-weight: normal;
  fill: #fff;
}

.edgePath path {
  stroke: #333;
  stroke-width: 1.5px;
  fill: none;
}

.edgePath.succeeded path { stroke: #8cb287; }
.edgePath.failed path { stroke: #d36764; }
.edgePath.pending path { stroke: #5d4c4c; }
.edgePath.errored path { stroke: #e1bc8e; }
.edgePath.aborted path { stroke: #d25f3a; }
.edgePath.started path { stroke: #ebb263; }

#arrowhead-succeeded path { fill: #8cb287; }
#arrowhead-failed path { fill: #d36764; }
#arrowhead-pending path { fill: #5d4c4c; }
#arrowhead-errored path { fill: #e1bc8e; }
#arrowhead-aborted path { fill: #d25f3a; }
#arrowhead-started path { fill: #ebb263; }

